--- a/index.html
+++ b/index.html
@@ -65,6 +65,24 @@
         border-radius: 6px;
         border: none;
     }
+    .card {
+    background:#1e293b;
+    padding:25px;
+    border-radius:12px;
+    margin-bottom:25px;
+    box-shadow:0 5px 20px rgba(0,0,0,0.5);
+    transition:0.3s;
+}
+
+.card:hover{
+    transform:scale(1.02);
+}
+
+a{
+    color:#facc15;
+    text-decoration:none;
+    font-weight:bold;
+}
 </style>
 
 </head>
