--- a/index.html
+++ b/index.html
@@ -1,136 +1,211 @@
 <!DOCTYPE html><html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ragul UPSC Portal | Private & Secure</title><!-- Basic Security Headers -->
-<meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline';">
-<meta http-equiv="X-Content-Type-Options" content="nosniff">
-<meta http-equiv="X-Frame-Options" content="DENY">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>OwnUpsc</title>
+<meta name="description" content="OwnUpsc - Smart UPSC preparation platform with Daily MCQs and Current Affairs."><style>
+body{
+    margin:0;
+    font-family:Arial, sans-serif;
+    color:#f1f5f9;
+    background:linear-gradient(-45deg,#0f172a,#1e293b,#0ea5e9,#111827);
+    background-size:400% 400%;
+    animation:gradientMove 12s ease infinite;
+}
 
-<style>
-    body {
-        margin: 0;
-        font-family: 'Segoe UI', sans-serif;
-        background: #0f172a;
-        color: #f1f5f9;
-    }
-    header {
-        background: #1e293b;
-        padding: 20px;
-        text-align: center;
-    }
-    h1 { margin: 0; }
-    nav {
-        display: flex;
-        justify-content: center;
-        gap: 20px;
-        margin-top: 10px;
-    }
-    nav a {
-        color: #38bdf8;
-        text-decoration: none;
-        font-weight: bold;
-    }
-    section {
-        padding: 40px 20px;
-        max-width: 1000px;
-        margin: auto;
-    }
-    .card {
-        background: #1e293b;
-        padding: 20px;
-        border-radius: 12px;
-        margin-bottom: 20px;
-        box-shadow: 0 4px 15px rgba(0,0,0,0.4);
-    }
-    .btn {
-        padding: 10px 20px;
-        background: #38bdf8;
-        border: none;
-        border-radius: 8px;
-        cursor: pointer;
-        font-weight: bold;
-    }
-    footer {
-        background: #1e293b;
-        text-align: center;
-        padding: 15px;
-        font-size: 0.9rem;
-    }
-    input, textarea {
-        width: 100%;
-        padding: 10px;
-        margin-top: 8px;
-        border-radius: 6px;
-        border: none;
-    }
-    .card {
-    background:#1e293b;
-    padding:25px;
-    border-radius:12px;
-    margin-bottom:25px;
-    box-shadow:0 5px 20px rgba(0,0,0,0.5);
+@keyframes gradientMove{
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+
+.hero{
+    text-align:center;
+    padding:110px 20px;
+}
+
+.logo{
+    font-size:1.2rem;
+    letter-spacing:3px;
+    opacity:0.7;
+    margin-bottom:15px;
+}
+
+.hero h1{
+    font-size:3rem;
+    margin-bottom:20px;
+}
+
+.hero p{
+    font-size:1.2rem;
+    opacity:0.85;
+    max-width:600px;
+    margin:auto;
+}
+
+.hero button{
+    margin-top:30px;
+    padding:12px 25px;
+    background:#38bdf8;
+    border:none;
+    border-radius:10px;
+    font-size:1rem;
+    font-weight:bold;
+    cursor:pointer;
+}
+
+.hero button:hover{
+    background:#0ea5e9;
+}
+
+nav{
+    text-align:center;
+    padding:15px;
+    background:rgba(0,0,0,0.4);
+    backdrop-filter:blur(8px);
+}
+
+nav a{
+    color:#facc15;
+    margin:0 15px;
+    text-decoration:none;
+    font-weight:bold;
+}
+
+section{
+    max-width:900px;
+    margin:60px auto;
+    padding:0 20px;
+}
+
+.card{
+    background:rgba(30,41,59,0.9);
+    padding:30px;
+    border-radius:18px;
+    margin-bottom:40px;
+    box-shadow:0 15px 40px rgba(0,0,0,0.5);
     transition:0.3s;
 }
 
 .card:hover{
-    transform:scale(1.02);
+    transform:scale(1.05);
 }
 
-a{
-    color:#facc15;
-    text-decoration:none;
+.option{
+    margin:8px 0;
+    padding:8px;
+    background:#1e293b;
+    border-radius:8px;
+    cursor:pointer;
+}
+
+.option:hover{
+    background:#334155;
+}
+
+button{
+    padding:10px 18px;
+    background:#38bdf8;
+    border:none;
+    border-radius:8px;
+    cursor:pointer;
+    font-weight:bold;
+    margin-top:15px;
+}
+
+button:hover{
+    background:#0ea5e9;
+}
+
+#result{
+    margin-top:15px;
     font-weight:bold;
 }
-</style>
 
-</head>
-<body><header>
-    <h1>Ragul UPSC Private Portal</h1>
-    <p>Owner: Ragul | Secure Academic Platform</p>
-    <nav>
-        <a href="#dashboard">Dashboard</a>
-        <a href="#notes">Notes</a>
-        <a href="#current">Current Affairs</a>
-        <a href="#tests">Mock Tests</a>
-        <a href="#contact">Contact</a>
-    </nav>
-</header><section id="dashboard">
-    <div class="card">
-        <h2>UPSC Dashboard</h2>
-        <p>Track syllabus completion, revision cycle, and performance analytics.</p>
-    </div>
-</section><section id="notes">
-    <div class="card">
-        <h2>Study Notes</h2>
-        <p>Upload and manage GS, Optional (Sociology), Essay & Ethics notes securely.</p>
-        <button class="btn">Upload Notes</button>
-    </div>
+footer{
+    text-align:center;
+    padding:30px;
+    font-size:0.9rem;
+    opacity:0.6;
+}
+</style></head>
+<body><div class="hero">
+<div class="logo">OWNUPSC</div>
+<h1>Master UPSC with Consistency</h1>
+<p>Practice smart. Think clearly. Improve daily. One step closer to success.</p>
+<button onclick="document.getElementById('mcq').scrollIntoView({behavior:'smooth'})">
+Start Practice
+</button>
+</div><nav>
+<a href="#mcq">Daily MCQ</a>
+<a href="#current">Current Affairs</a>
+</nav><section id="mcq">
+<div class="card">
+<h2>Random Prelims MCQ</h2>
+<p id="question"></p>
+<div id="options"></div>
+<button onclick="nextQuestion()">Next Question</button>
+<p id="result"></p>
+</div>
 </section><section id="current">
-    <div class="card">
-        <h2>Current Affairs Tracker</h2>
-        <p>Maintain monthly important articles and editorial summaries.</p>
-    </div>
-</section><section id="tests">
-    <div class="card">
-        <h2>Mock Test Section</h2>
-        <p>Prelims MCQs | CSAT Practice | Mains Answer Writing</p>
-        <button class="btn">Start Test</button>
-    </div>
-</section><section id="contact">
-    <div class="card">
-        <h2>Admin Access</h2>
-        <p>This portal is privately owned and managed by Ragul.</p>
-        <form>
-            <label>Username</label>
-            <input type="text" placeholder="Enter username">
-            <label>Password</label>
-            <input type="password" placeholder="Enter password">
-            <button class="btn" type="submit">Login</button>
-        </form>
-    </div>
+<div class="card">
+<h2>Current Affairs Insight</h2>
+<p><strong>Topic:</strong> Digital Public Infrastructure</p>
+<p>The DPI framework integrates identity, payments and data governance systems to enhance governance efficiency.</p>
+</div>
 </section><footer>
-    © 2026 Ragul | Private UPSC Preparation Portal | All Rights Reserved
-</footer></body>
+OwnUpsc
+</footer><script>
+const questions = [
+{
+q: "Which Article of the Constitution deals with Constitutional Remedies?",
+options: ["Article 14", "Article 19", "Article 32", "Article 368"],
+answer: "Article 32"
+},
+{
+q: "Which Amendment introduced the Anti-Defection Law?",
+options: ["42nd Amendment", "44th Amendment", "52nd Amendment", "61st Amendment"],
+answer: "52nd Amendment"
+},
+{
+q: "Which Schedule deals with Panchayati Raj?",
+options: ["10th Schedule", "11th Schedule", "12th Schedule", "9th Schedule"],
+answer: "11th Schedule"
+},
+{
+q: "Fundamental Duties were added by which Amendment?",
+options: ["42nd Amendment", "44th Amendment", "86th Amendment", "52nd Amendment"],
+answer: "42nd Amendment"
+}
+];
+
+let currentQuestion = {};
+
+function loadQuestion(){
+currentQuestion = questions[Math.floor(Math.random()*questions.length)];
+document.getElementById("question").innerText = currentQuestion.q;
+
+let optionsHTML = "";
+currentQuestion.options.forEach(option => {
+optionsHTML += `<div class="option" onclick="checkAnswer('${option}')">${option}</div>`;
+});
+
+document.getElementById("options").innerHTML = optionsHTML;
+document.getElementById("result").innerText = "";
+}
+
+function checkAnswer(selected){
+if(selected === currentQuestion.answer){
+document.getElementById("result").innerText = "✅ Correct Answer";
+}else{
+document.getElementById("result").innerText = "❌ Wrong Answer";
+}
+}
+
+function nextQuestion(){
+loadQuestion();
+}
+
+loadQuestion();
+</script></body>
 </html>
