--- a/index.html
+++ b/index.html
@@ -2,115 +2,66 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>OwnUpsc</title>
-<meta name="description" content="OwnUpsc - Smart UPSC preparation platform with Daily MCQs and Current Affairs."><style>
+<title>OwnUpsc</title><style>
 body{
     margin:0;
     font-family:Arial, sans-serif;
+    background:#0f172a;
     color:#f1f5f9;
-    background:linear-gradient(-45deg,#0f172a,#1e293b,#0ea5e9,#111827);
-    background-size:400% 400%;
-    animation:gradientMove 12s ease infinite;
-}
-
-@keyframes gradientMove{
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
 }
 
 .hero{
     text-align:center;
-    padding:110px 20px;
-}
-
-.logo{
-    font-size:1.2rem;
-    letter-spacing:3px;
-    opacity:0.7;
-    margin-bottom:15px;
+    padding:80px 20px;
+    background:linear-gradient(135deg,#1e293b,#0ea5e9);
 }
 
 .hero h1{
-    font-size:3rem;
-    margin-bottom:20px;
-}
-
-.hero p{
-    font-size:1.2rem;
-    opacity:0.85;
-    max-width:600px;
-    margin:auto;
-}
-
-.hero button{
-    margin-top:30px;
-    padding:12px 25px;
-    background:#38bdf8;
-    border:none;
-    border-radius:10px;
-    font-size:1rem;
-    font-weight:bold;
-    cursor:pointer;
-}
-
-.hero button:hover{
-    background:#0ea5e9;
-}
-
-nav{
-    text-align:center;
-    padding:15px;
-    background:rgba(0,0,0,0.4);
-    backdrop-filter:blur(8px);
-}
-
-nav a{
-    color:#facc15;
-    margin:0 15px;
-    text-decoration:none;
-    font-weight:bold;
+    margin:0;
+    font-size:2.8rem;
 }
 
 section{
-    max-width:900px;
-    margin:60px auto;
+    max-width:800px;
+    margin:40px auto;
     padding:0 20px;
 }
 
 .card{
-    background:rgba(30,41,59,0.9);
-    padding:30px;
-    border-radius:18px;
-    margin-bottom:40px;
-    box-shadow:0 15px 40px rgba(0,0,0,0.5);
-    transition:0.3s;
-}
-
-.card:hover{
-    transform:scale(1.05);
+    background:#1e293b;
+    padding:25px;
+    border-radius:15px;
+    box-shadow:0 10px 30px rgba(0,0,0,0.4);
 }
 
 .option{
-    margin:8px 0;
-    padding:8px;
-    background:#1e293b;
+    background:#334155;
+    padding:10px;
     border-radius:8px;
+    margin:8px 0;
     cursor:pointer;
 }
 
 .option:hover{
-    background:#334155;
+    background:#475569;
+}
+
+.correct{
+    background:#16a34a !important;
+}
+
+.wrong{
+    background:#dc2626 !important;
 }
 
 button{
+    margin-top:15px;
     padding:10px 18px;
     background:#38bdf8;
     border:none;
     border-radius:8px;
     cursor:pointer;
     font-weight:bold;
-    margin-top:15px;
 }
 
 button:hover{
@@ -124,88 +75,87 @@ button:hover{
 
 footer{
     text-align:center;
-    padding:30px;
-    font-size:0.9rem;
+    padding:25px;
     opacity:0.6;
 }
 </style></head>
 <body><div class="hero">
-<div class="logo">OWNUPSC</div>
-<h1>Master UPSC with Consistency</h1>
-<p>Practice smart. Think clearly. Improve daily. One step closer to success.</p>
-<button onclick="document.getElementById('mcq').scrollIntoView({behavior:'smooth'})">
-Start Practice
-</button>
-</div><nav>
-<a href="#mcq">Daily MCQ</a>
-<a href="#current">Current Affairs</a>
-</nav><section id="mcq">
+<h1>OwnUpsc Practice</h1>
+<p>Daily Concept Based MCQ Practice</p>
+</div><section>
 <div class="card">
-<h2>Random Prelims MCQ</h2>
-<p id="question"></p>
+<h2 id="question"></h2>
 <div id="options"></div>
-<button onclick="nextQuestion()">Next Question</button>
+<button onclick="loadQuestion()">Next Question</button>
 <p id="result"></p>
-</div>
-</section><section id="current">
-<div class="card">
-<h2>Current Affairs Insight</h2>
-<p><strong>Topic:</strong> Digital Public Infrastructure</p>
-<p>The DPI framework integrates identity, payments and data governance systems to enhance governance efficiency.</p>
 </div>
 </section><footer>
 OwnUpsc
 </footer><script>
+
+// 🔥 MANUAL QUESTION UPDATE SECTION
+// You can add, edit or remove questions here manually
+
 const questions = [
 {
-q: "Which Article of the Constitution deals with Constitutional Remedies?",
-options: ["Article 14", "Article 19", "Article 32", "Article 368"],
-answer: "Article 32"
+question: "Which Article of the Constitution deals with Fundamental Rights?",
+options: ["Article 12-35", "Article 40", "Article 368", "Article 51A"],
+answer: "Article 12-35"
 },
 {
-q: "Which Amendment introduced the Anti-Defection Law?",
-options: ["42nd Amendment", "44th Amendment", "52nd Amendment", "61st Amendment"],
-answer: "52nd Amendment"
+question: "Who appoints the Chief Election Commissioner of India?",
+options: ["Prime Minister", "President", "Chief Justice of India", "Parliament"],
+answer: "President"
 },
 {
-q: "Which Schedule deals with Panchayati Raj?",
-options: ["10th Schedule", "11th Schedule", "12th Schedule", "9th Schedule"],
-answer: "11th Schedule"
-},
-{
-q: "Fundamental Duties were added by which Amendment?",
-options: ["42nd Amendment", "44th Amendment", "86th Amendment", "52nd Amendment"],
-answer: "42nd Amendment"
+question: "Which Amendment introduced GST?",
+options: ["99th Amendment", "101st Amendment", "86th Amendment", "73rd Amendment"],
+answer: "101st Amendment"
 }
 ];
 
 let currentQuestion = {};
+let answered = false;
 
 function loadQuestion(){
+answered = false;
+document.getElementById("result").innerText = "";
+
 currentQuestion = questions[Math.floor(Math.random()*questions.length)];
-document.getElementById("question").innerText = currentQuestion.q;
+
+document.getElementById("question").innerText = currentQuestion.question;
 
 let optionsHTML = "";
 currentQuestion.options.forEach(option => {
-optionsHTML += `<div class="option" onclick="checkAnswer('${option}')">${option}</div>`;
+optionsHTML += `<div class="option" onclick="checkAnswer(this, '${option}')">${option}</div>`;
 });
 
+
 document.getElementById("options").innerHTML = optionsHTML;
-document.getElementById("result").innerText = "";
 }
 
-function checkAnswer(selected){
+function checkAnswer(element, selected){
+if(answered) return; // 🔒 lock after first answer
+
+answered = true;
+
+const options = document.querySelectorAll(".option");
+options.forEach(opt => {
+if(opt.innerText === currentQuestion.answer){
+opt.classList.add("correct");
+}
+});
+
 if(selected === currentQuestion.answer){
+element.classList.add("correct");
 document.getElementById("result").innerText = "✅ Correct Answer";
 }else{
-document.getElementById("result").innerText = "❌ Wrong Answer";
+element.classList.add("wrong");
+document.getElementById("result").innerText = "❌ Wrong Answer | Correct: " + currentQuestion.answer;
 }
 }
 
-function nextQuestion(){
 loadQuestion();
-}
 
-loadQuestion();
 </script></body>
 </html>
